--- a/src/pages/admin-reservacion-detalle/admin-reservacion-detalle.html
+++ b/src/pages/admin-reservacion-detalle/admin-reservacion-detalle.html
@@ -55,6 +55,15 @@
 
       </p>
 
+      <p style="font-size: x-large; text-align: center;">
+        <a
+          [href]="(reservaciones.idUsuario | getNameUser | async)?.instagram"
+          style="text-transform: uppercase"
+        >
+          <ion-icon ios="logo-instagram" md="logo-instagram" style="color: #fcc04d"></ion-icon>
+        </a>
+      </p>
+
       <h6 text-center *ngIf="this.reservaciones.idevento" class="nombreE">
 
         ({{ (reservaciones.idevento | getNameEvento | async)?.titulo }})
@@ -266,12 +275,12 @@
           <ion-col><b> {{ total_final | currency}} </b></ion-col>
         </ion-row>
 
-        <!-- PROPINA -->
+        <!-- COMISION 5.9 -->
         <ion-row>
           <ion-col></ion-col>
           <ion-col><b></b></ion-col>
-          <ion-col>Propina</ion-col>
-          <ion-col>{{ propinaRe2 | currency }}</ion-col>
+          <ion-col>Comision 5.9</ion-col>
+          <ion-col>{{ comision | currency}}</ion-col>
         </ion-row>
 
         <!-- IVA -->
@@ -282,12 +291,12 @@
           <ion-col>{{ iva | currency}}</ion-col>
         </ion-row>
 
-        <!-- COMISION 5.9 -->
+        <!-- PROPINA -->
         <ion-row>
           <ion-col></ion-col>
           <ion-col><b></b></ion-col>
-          <ion-col>Comision 5.9</ion-col>
-          <ion-col>{{ comision | currency}}</ion-col>
+          <ion-col>Propina</ion-col>
+          <ion-col>{{ propinaRe2 | currency }}</ion-col>
         </ion-row>
 
         <!-- TOTAL -->
@@ -325,16 +334,15 @@
           <ion-col><b>{{ reservaciones.totalReservacion | currency }}</b></ion-col>
         </ion-row>
 
-        <!-- PROPINA -->
-        <ion-row>
+         <!-- Comision 5.9  -->
+         <ion-row>
+          <ion-col></ion-col>
           <ion-col><b></b></ion-col>
-          <ion-col><b></b></ion-col>
-          <ion-col>Propina</ion-col>
-          <ion-col>{{ propinaRe | currency }}</ion-col>
+          <ion-col>Comision 5.9</ion-col>
+          <ion-col>{{ comision | currency }}</ion-col>
         </ion-row>
 
         <!-- IVA  -->
-
         <ion-row>
           <ion-col></ion-col>
           <ion-col><b></b></ion-col>
@@ -342,12 +350,12 @@
           <ion-col>{{ iva | currency }}</ion-col>
         </ion-row>
 
-        <!-- Comision 5.9  -->
+        <!-- PROPINA -->
         <ion-row>
-          <ion-col></ion-col>
           <ion-col><b></b></ion-col>
-          <ion-col>Comision 5.9</ion-col>
-          <ion-col>{{ comision | currency }}</ion-col>
+          <ion-col><b></b></ion-col>
+          <ion-col>Propina</ion-col>
+          <ion-col>{{ propinaRe | currency }}</ion-col>
         </ion-row>
 
         <!-- Total  -->
@@ -410,6 +418,17 @@
         compartidas.telefono }}
       </ion-col>
 
+      <ion-col >
+        <p style="font-size: x-large; text-align: center;">
+          <a
+            [href]="(reservaciones.idUsuario | getNameUser | async)?.instagram"
+            style="text-transform: uppercase"
+          >
+            <ion-icon ios="logo-instagram" md="logo-instagram" style="color: #fcc04d"></ion-icon>
+          </a>
+        </p>
+      </ion-col>
+
       <ion-col>
 
         <ion-note item-end>
@@ -429,6 +448,8 @@
       </ion-col>
 
     </ion-row>
+
+    <hr>
 
   </div>
 
