--- a/src/pages/admin-rp-codigo/admin-rp-codigo.html
+++ b/src/pages/admin-rp-codigo/admin-rp-codigo.html
@@ -96,7 +96,7 @@
               <ion-col col-12 text-center>
 
                 <br>
-                <button ion-button block round class="btnDetalle" (click)="copyText()">Copiar código</button>
+                <button ion-button block round class="btnDetalle" (click)="_up.copiarCodigo(codigo.uidRp)">Copiar código</button>
               </ion-col>
               <br>
             </ion-row>
@@ -112,7 +112,7 @@
 
   <div *ngFor="let sucursal of sucursales">
 
-    <div *ngIf="sucursal.type == 'a'">
+    <div *ngIf="this.tpye == 'a' || this.tpye == 'coordinacion'">
 
       <div>
 
@@ -139,7 +139,7 @@
 
         <ion-list class="descripcion">
 
-          <div *ngIf="sucursal.type == 'a'" (click)="selectUsuario(admin.uid, admin.active)">
+          <div *ngIf="this.tpye == 'a' || this.tpye == 'coordinacion'" (click)="selectUsuario(admin.uid, admin.active)">
 
             <ion-list>
 
@@ -156,7 +156,7 @@
                   <b>{{ admin.displayName }}</b>
                   <ng-container *ngIf="admin.type == 'rp'">(RP)</ng-container>
                 </h2>
-
+                
                 <ng-container *ngFor="let codigoRp of codigosRps">
 
                   <div *ngIf="admin.uid == codigoRp.uidRp">
